# ultrasound-simulation

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
common/: phantom.cpp  phantom.h
compress/: compressphantom.cpp
create/: createphantom.cpp
example/: rfDataInputTemplate.txt  runAll.sh  simCreatePhantomInput.txt
matlab_scripts/: binary2matrix.m  writeBscFile.m
rfData/: README.md  pressureField.cpp  pressureField.h  rf_data.cpp  util.cpp  util.h
